output should be optional, with default output.csv #21
